orgmunge/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> org_file
Rule 1     org_file -> metadata org_tree
Rule 2     org_file -> non_metadata_body_text SEPARATOR org_tree
Rule 3     org_file -> metadata non_metadata_body_text SEPARATOR org_tree
Rule 4     org_file -> metadata
Rule 5     org_file -> org_tree
Rule 6     org_file -> empty
Rule 7     metadata -> METADATA SEPARATOR
Rule 8     org_tree -> heading
Rule 9     org_tree -> heading SEPARATOR
Rule 10    org_tree -> org_tree heading SEPARATOR
Rule 11    org_tree -> org_tree heading
Rule 12    heading -> headline NEWLINE contents
Rule 13    heading -> headline SEPARATOR
Rule 14    headline -> STARS SPACE comment todo priority title cookie tags
Rule 15    comment -> COMMENT SPACE
Rule 16    comment -> empty
Rule 17    todo -> TODO SPACE
Rule 18    todo -> empty
Rule 19    priority -> PRIORITY SPACE
Rule 20    priority -> empty
Rule 21    title -> TEXT
Rule 22    title -> title SPACE TEXT
Rule 23    title -> title SPACE
Rule 24    cookie -> COOKIE SPACE
Rule 25    cookie -> COOKIE
Rule 26    cookie -> empty
Rule 27    tags -> TAGS
Rule 28    tags -> empty
Rule 29    contents -> scheduling drawers body
Rule 30    scheduling_data -> SCHEDULING SPACE any_timestamp NEWLINE
Rule 31    scheduling_data -> SCHEDULING SPACE any_timestamp SEPARATOR
Rule 32    scheduling_data -> SCHEDULING SPACE any_timestamp SPACE
Rule 33    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp NEWLINE
Rule 34    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SEPARATOR
Rule 35    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SPACE
Rule 36    scheduling -> scheduling_data
Rule 37    scheduling -> empty
Rule 38    any_timestamp -> ATIMESTAMP
Rule 39    any_timestamp -> ITIMESTAMP
Rule 40    drawer_data -> DRAWER NEWLINE
Rule 41    drawer_data -> DRAWER SEPARATOR
Rule 42    drawer_data -> drawer_data DRAWER NEWLINE
Rule 43    drawer_data -> drawer_data DRAWER SEPARATOR
Rule 44    drawers -> drawer_data
Rule 45    drawers -> empty
Rule 46    body -> body_text
Rule 47    body -> empty
Rule 48    non_metadata_body_text -> TEXT
Rule 49    non_metadata_body_text -> SPACE
Rule 50    non_metadata_body_text -> any_timestamp
Rule 51    non_metadata_body_text -> non_metadata_body_text TEXT
Rule 52    non_metadata_body_text -> non_metadata_body_text SPACE
Rule 53    non_metadata_body_text -> non_metadata_body_text special_token
Rule 54    non_metadata_body_text -> non_metadata_body_text any_timestamp
Rule 55    non_metadata_body_text -> non_metadata_body_text NEWLINE
Rule 56    special_token -> SCHEDULING
Rule 57    special_token -> COOKIE
Rule 58    special_token -> PRIORITY
Rule 59    special_token -> TODO
Rule 60    special_token -> COMMENT
Rule 61    special_token -> TAGS
Rule 62    body_text -> TEXT
Rule 63    body_text -> SPACE
Rule 64    body_text -> METADATA
Rule 65    body_text -> any_timestamp
Rule 66    body_text -> body_text TEXT
Rule 67    body_text -> body_text SPACE
Rule 68    body_text -> body_text special_token
Rule 69    body_text -> body_text METADATA
Rule 70    body_text -> body_text any_timestamp
Rule 71    body_text -> body_text NEWLINE
Rule 72    empty -> <empty>

Terminals, with rules where they appear

ATIMESTAMP           : 38
COMMENT              : 15 60
COOKIE               : 24 25 57
DRAWER               : 40 41 42 43
ITIMESTAMP           : 39
METADATA             : 7 64 69
NEWLINE              : 12 30 33 40 42 55 71
PRIORITY             : 19 58
SCHEDULING           : 30 31 32 33 34 35 56
SEPARATOR            : 2 3 7 9 10 13 31 34 41 43
SPACE                : 14 15 17 19 22 23 24 30 31 32 32 33 34 35 35 49 52 63 67
STARS                : 14
TAGS                 : 27 61
TEXT                 : 21 22 48 51 62 66
TODO                 : 17 59
error                : 

Nonterminals, with rules where they appear

any_timestamp        : 30 31 32 33 34 35 50 54 65 70
body                 : 29
body_text            : 46 66 67 68 69 70 71
comment              : 14
contents             : 12
cookie               : 14
drawer_data          : 42 43 44
drawers              : 29
empty                : 6 16 18 20 26 28 37 45 47
heading              : 8 9 10 11
headline             : 12 13
metadata             : 1 3 4
non_metadata_body_text : 2 3 51 52 53 54 55
org_file             : 0
org_tree             : 1 2 3 5 10 11
priority             : 14
scheduling           : 29
scheduling_data      : 33 34 35 36
special_token        : 53 68
tags                 : 14
title                : 14 22 23
todo                 : 14

Parsing method: LALR

state 0

    (0) S' -> . org_file
    (1) org_file -> . metadata org_tree
    (2) org_file -> . non_metadata_body_text SEPARATOR org_tree
    (3) org_file -> . metadata non_metadata_body_text SEPARATOR org_tree
    (4) org_file -> . metadata
    (5) org_file -> . org_tree
    (6) org_file -> . empty
    (7) metadata -> . METADATA SEPARATOR
    (48) non_metadata_body_text -> . TEXT
    (49) non_metadata_body_text -> . SPACE
    (50) non_metadata_body_text -> . any_timestamp
    (51) non_metadata_body_text -> . non_metadata_body_text TEXT
    (52) non_metadata_body_text -> . non_metadata_body_text SPACE
    (53) non_metadata_body_text -> . non_metadata_body_text special_token
    (54) non_metadata_body_text -> . non_metadata_body_text any_timestamp
    (55) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (8) org_tree -> . heading
    (9) org_tree -> . heading SEPARATOR
    (10) org_tree -> . org_tree heading SEPARATOR
    (11) org_tree -> . org_tree heading
    (72) empty -> .
    (38) any_timestamp -> . ATIMESTAMP
    (39) any_timestamp -> . ITIMESTAMP
    (12) heading -> . headline NEWLINE contents
    (13) heading -> . headline SEPARATOR
    (14) headline -> . STARS SPACE comment todo priority title cookie tags

    METADATA        shift and go to state 6
    TEXT            shift and go to state 7
    SPACE           shift and go to state 8
    $end            reduce using rule 72 (empty -> .)
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12
    STARS           shift and go to state 14

    org_file                       shift and go to state 1
    metadata                       shift and go to state 2
    org_tree                       shift and go to state 3
    non_metadata_body_text         shift and go to state 4
    empty                          shift and go to state 5
    any_timestamp                  shift and go to state 9
    heading                        shift and go to state 10
    headline                       shift and go to state 13

state 1

    (0) S' -> org_file .



state 2

    (1) org_file -> metadata . org_tree
    (3) org_file -> metadata . non_metadata_body_text SEPARATOR org_tree
    (4) org_file -> metadata .
    (8) org_tree -> . heading
    (9) org_tree -> . heading SEPARATOR
    (10) org_tree -> . org_tree heading SEPARATOR
    (11) org_tree -> . org_tree heading
    (48) non_metadata_body_text -> . TEXT
    (49) non_metadata_body_text -> . SPACE
    (50) non_metadata_body_text -> . any_timestamp
    (51) non_metadata_body_text -> . non_metadata_body_text TEXT
    (52) non_metadata_body_text -> . non_metadata_body_text SPACE
    (53) non_metadata_body_text -> . non_metadata_body_text special_token
    (54) non_metadata_body_text -> . non_metadata_body_text any_timestamp
    (55) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (12) heading -> . headline NEWLINE contents
    (13) heading -> . headline SEPARATOR
    (38) any_timestamp -> . ATIMESTAMP
    (39) any_timestamp -> . ITIMESTAMP
    (14) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 4 (org_file -> metadata .)
    TEXT            shift and go to state 7
    SPACE           shift and go to state 8
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12
    STARS           shift and go to state 14

    org_tree                       shift and go to state 15
    non_metadata_body_text         shift and go to state 16
    heading                        shift and go to state 10
    any_timestamp                  shift and go to state 9
    headline                       shift and go to state 13

state 3

    (5) org_file -> org_tree .
    (10) org_tree -> org_tree . heading SEPARATOR
    (11) org_tree -> org_tree . heading
    (12) heading -> . headline NEWLINE contents
    (13) heading -> . headline SEPARATOR
    (14) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 5 (org_file -> org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 4

    (2) org_file -> non_metadata_body_text . SEPARATOR org_tree
    (51) non_metadata_body_text -> non_metadata_body_text . TEXT
    (52) non_metadata_body_text -> non_metadata_body_text . SPACE
    (53) non_metadata_body_text -> non_metadata_body_text . special_token
    (54) non_metadata_body_text -> non_metadata_body_text . any_timestamp
    (55) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (56) special_token -> . SCHEDULING
    (57) special_token -> . COOKIE
    (58) special_token -> . PRIORITY
    (59) special_token -> . TODO
    (60) special_token -> . COMMENT
    (61) special_token -> . TAGS
    (38) any_timestamp -> . ATIMESTAMP
    (39) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 18
    TEXT            shift and go to state 19
    SPACE           shift and go to state 20
    NEWLINE         shift and go to state 23
    SCHEDULING      shift and go to state 24
    COOKIE          shift and go to state 25
    PRIORITY        shift and go to state 26
    TODO            shift and go to state 27
    COMMENT         shift and go to state 28
    TAGS            shift and go to state 29
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12

    special_token                  shift and go to state 21
    any_timestamp                  shift and go to state 22

state 5

    (6) org_file -> empty .

    $end            reduce using rule 6 (org_file -> empty .)


state 6

    (7) metadata -> METADATA . SEPARATOR

    SEPARATOR       shift and go to state 30


state 7

    (48) non_metadata_body_text -> TEXT .

    SEPARATOR       reduce using rule 48 (non_metadata_body_text -> TEXT .)
    TEXT            reduce using rule 48 (non_metadata_body_text -> TEXT .)
    SPACE           reduce using rule 48 (non_metadata_body_text -> TEXT .)
    NEWLINE         reduce using rule 48 (non_metadata_body_text -> TEXT .)
    SCHEDULING      reduce using rule 48 (non_metadata_body_text -> TEXT .)
    COOKIE          reduce using rule 48 (non_metadata_body_text -> TEXT .)
    PRIORITY        reduce using rule 48 (non_metadata_body_text -> TEXT .)
    TODO            reduce using rule 48 (non_metadata_body_text -> TEXT .)
    COMMENT         reduce using rule 48 (non_metadata_body_text -> TEXT .)
    TAGS            reduce using rule 48 (non_metadata_body_text -> TEXT .)
    ATIMESTAMP      reduce using rule 48 (non_metadata_body_text -> TEXT .)
    ITIMESTAMP      reduce using rule 48 (non_metadata_body_text -> TEXT .)


state 8

    (49) non_metadata_body_text -> SPACE .

    SEPARATOR       reduce using rule 49 (non_metadata_body_text -> SPACE .)
    TEXT            reduce using rule 49 (non_metadata_body_text -> SPACE .)
    SPACE           reduce using rule 49 (non_metadata_body_text -> SPACE .)
    NEWLINE         reduce using rule 49 (non_metadata_body_text -> SPACE .)
    SCHEDULING      reduce using rule 49 (non_metadata_body_text -> SPACE .)
    COOKIE          reduce using rule 49 (non_metadata_body_text -> SPACE .)
    PRIORITY        reduce using rule 49 (non_metadata_body_text -> SPACE .)
    TODO            reduce using rule 49 (non_metadata_body_text -> SPACE .)
    COMMENT         reduce using rule 49 (non_metadata_body_text -> SPACE .)
    TAGS            reduce using rule 49 (non_metadata_body_text -> SPACE .)
    ATIMESTAMP      reduce using rule 49 (non_metadata_body_text -> SPACE .)
    ITIMESTAMP      reduce using rule 49 (non_metadata_body_text -> SPACE .)


state 9

    (50) non_metadata_body_text -> any_timestamp .

    SEPARATOR       reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    TEXT            reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    SPACE           reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    NEWLINE         reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    SCHEDULING      reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    COOKIE          reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    PRIORITY        reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    TODO            reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    COMMENT         reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    TAGS            reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    ATIMESTAMP      reduce using rule 50 (non_metadata_body_text -> any_timestamp .)
    ITIMESTAMP      reduce using rule 50 (non_metadata_body_text -> any_timestamp .)


state 10

    (8) org_tree -> heading .
    (9) org_tree -> heading . SEPARATOR

    STARS           reduce using rule 8 (org_tree -> heading .)
    $end            reduce using rule 8 (org_tree -> heading .)
    SEPARATOR       shift and go to state 31


state 11

    (38) any_timestamp -> ATIMESTAMP .

    SEPARATOR       reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    TEXT            reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    SPACE           reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    NEWLINE         reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    SCHEDULING      reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    COOKIE          reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    PRIORITY        reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    TODO            reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    COMMENT         reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    TAGS            reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    ATIMESTAMP      reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    ITIMESTAMP      reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    METADATA        reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    STARS           reduce using rule 38 (any_timestamp -> ATIMESTAMP .)
    $end            reduce using rule 38 (any_timestamp -> ATIMESTAMP .)


state 12

    (39) any_timestamp -> ITIMESTAMP .

    SEPARATOR       reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    TEXT            reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    SPACE           reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    NEWLINE         reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    SCHEDULING      reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    COOKIE          reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    PRIORITY        reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    TODO            reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    COMMENT         reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    TAGS            reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    ATIMESTAMP      reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    ITIMESTAMP      reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    METADATA        reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    STARS           reduce using rule 39 (any_timestamp -> ITIMESTAMP .)
    $end            reduce using rule 39 (any_timestamp -> ITIMESTAMP .)


state 13

    (12) heading -> headline . NEWLINE contents
    (13) heading -> headline . SEPARATOR

    NEWLINE         shift and go to state 32
    SEPARATOR       shift and go to state 33


state 14

    (14) headline -> STARS . SPACE comment todo priority title cookie tags

    SPACE           shift and go to state 34


state 15

    (1) org_file -> metadata org_tree .
    (10) org_tree -> org_tree . heading SEPARATOR
    (11) org_tree -> org_tree . heading
    (12) heading -> . headline NEWLINE contents
    (13) heading -> . headline SEPARATOR
    (14) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 1 (org_file -> metadata org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 16

    (3) org_file -> metadata non_metadata_body_text . SEPARATOR org_tree
    (51) non_metadata_body_text -> non_metadata_body_text . TEXT
    (52) non_metadata_body_text -> non_metadata_body_text . SPACE
    (53) non_metadata_body_text -> non_metadata_body_text . special_token
    (54) non_metadata_body_text -> non_metadata_body_text . any_timestamp
    (55) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (56) special_token -> . SCHEDULING
    (57) special_token -> . COOKIE
    (58) special_token -> . PRIORITY
    (59) special_token -> . TODO
    (60) special_token -> . COMMENT
    (61) special_token -> . TAGS
    (38) any_timestamp -> . ATIMESTAMP
    (39) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 35
    TEXT            shift and go to state 19
    SPACE           shift and go to state 20
    NEWLINE         shift and go to state 23
    SCHEDULING      shift and go to state 24
    COOKIE          shift and go to state 25
    PRIORITY        shift and go to state 26
    TODO            shift and go to state 27
    COMMENT         shift and go to state 28
    TAGS            shift and go to state 29
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12

    special_token                  shift and go to state 21
    any_timestamp                  shift and go to state 22

state 17

    (10) org_tree -> org_tree heading . SEPARATOR
    (11) org_tree -> org_tree heading .

    SEPARATOR       shift and go to state 36
    STARS           reduce using rule 11 (org_tree -> org_tree heading .)
    $end            reduce using rule 11 (org_tree -> org_tree heading .)


state 18

    (2) org_file -> non_metadata_body_text SEPARATOR . org_tree
    (8) org_tree -> . heading
    (9) org_tree -> . heading SEPARATOR
    (10) org_tree -> . org_tree heading SEPARATOR
    (11) org_tree -> . org_tree heading
    (12) heading -> . headline NEWLINE contents
    (13) heading -> . headline SEPARATOR
    (14) headline -> . STARS SPACE comment todo priority title cookie tags

    STARS           shift and go to state 14

    org_tree                       shift and go to state 37
    heading                        shift and go to state 10
    headline                       shift and go to state 13

state 19

    (51) non_metadata_body_text -> non_metadata_body_text TEXT .

    SEPARATOR       reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TEXT            reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    SPACE           reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    NEWLINE         reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    SCHEDULING      reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    COOKIE          reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    PRIORITY        reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TODO            reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    COMMENT         reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TAGS            reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ATIMESTAMP      reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ITIMESTAMP      reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text TEXT .)


state 20

    (52) non_metadata_body_text -> non_metadata_body_text SPACE .

    SEPARATOR       reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TEXT            reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    SPACE           reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    NEWLINE         reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    SCHEDULING      reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    COOKIE          reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    PRIORITY        reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TODO            reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    COMMENT         reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TAGS            reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ATIMESTAMP      reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ITIMESTAMP      reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text SPACE .)


state 21

    (53) non_metadata_body_text -> non_metadata_body_text special_token .

    SEPARATOR       reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TEXT            reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    SPACE           reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    NEWLINE         reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    SCHEDULING      reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    COOKIE          reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    PRIORITY        reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TODO            reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    COMMENT         reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TAGS            reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    ATIMESTAMP      reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)
    ITIMESTAMP      reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text special_token .)


state 22

    (54) non_metadata_body_text -> non_metadata_body_text any_timestamp .

    SEPARATOR       reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    TEXT            reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    SPACE           reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    NEWLINE         reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    SCHEDULING      reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    COOKIE          reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    PRIORITY        reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    TODO            reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    COMMENT         reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    TAGS            reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    ATIMESTAMP      reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    ITIMESTAMP      reduce using rule 54 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)


state 23

    (55) non_metadata_body_text -> non_metadata_body_text NEWLINE .

    SEPARATOR       reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TEXT            reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    SPACE           reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    NEWLINE         reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    SCHEDULING      reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    COOKIE          reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    PRIORITY        reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TODO            reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    COMMENT         reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TAGS            reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ATIMESTAMP      reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ITIMESTAMP      reduce using rule 55 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)


state 24

    (56) special_token -> SCHEDULING .

    SEPARATOR       reduce using rule 56 (special_token -> SCHEDULING .)
    TEXT            reduce using rule 56 (special_token -> SCHEDULING .)
    SPACE           reduce using rule 56 (special_token -> SCHEDULING .)
    NEWLINE         reduce using rule 56 (special_token -> SCHEDULING .)
    SCHEDULING      reduce using rule 56 (special_token -> SCHEDULING .)
    COOKIE          reduce using rule 56 (special_token -> SCHEDULING .)
    PRIORITY        reduce using rule 56 (special_token -> SCHEDULING .)
    TODO            reduce using rule 56 (special_token -> SCHEDULING .)
    COMMENT         reduce using rule 56 (special_token -> SCHEDULING .)
    TAGS            reduce using rule 56 (special_token -> SCHEDULING .)
    ATIMESTAMP      reduce using rule 56 (special_token -> SCHEDULING .)
    ITIMESTAMP      reduce using rule 56 (special_token -> SCHEDULING .)
    METADATA        reduce using rule 56 (special_token -> SCHEDULING .)
    STARS           reduce using rule 56 (special_token -> SCHEDULING .)
    $end            reduce using rule 56 (special_token -> SCHEDULING .)


state 25

    (57) special_token -> COOKIE .

    SEPARATOR       reduce using rule 57 (special_token -> COOKIE .)
    TEXT            reduce using rule 57 (special_token -> COOKIE .)
    SPACE           reduce using rule 57 (special_token -> COOKIE .)
    NEWLINE         reduce using rule 57 (special_token -> COOKIE .)
    SCHEDULING      reduce using rule 57 (special_token -> COOKIE .)
    COOKIE          reduce using rule 57 (special_token -> COOKIE .)
    PRIORITY        reduce using rule 57 (special_token -> COOKIE .)
    TODO            reduce using rule 57 (special_token -> COOKIE .)
    COMMENT         reduce using rule 57 (special_token -> COOKIE .)
    TAGS            reduce using rule 57 (special_token -> COOKIE .)
    ATIMESTAMP      reduce using rule 57 (special_token -> COOKIE .)
    ITIMESTAMP      reduce using rule 57 (special_token -> COOKIE .)
    METADATA        reduce using rule 57 (special_token -> COOKIE .)
    STARS           reduce using rule 57 (special_token -> COOKIE .)
    $end            reduce using rule 57 (special_token -> COOKIE .)


state 26

    (58) special_token -> PRIORITY .

    SEPARATOR       reduce using rule 58 (special_token -> PRIORITY .)
    TEXT            reduce using rule 58 (special_token -> PRIORITY .)
    SPACE           reduce using rule 58 (special_token -> PRIORITY .)
    NEWLINE         reduce using rule 58 (special_token -> PRIORITY .)
    SCHEDULING      reduce using rule 58 (special_token -> PRIORITY .)
    COOKIE          reduce using rule 58 (special_token -> PRIORITY .)
    PRIORITY        reduce using rule 58 (special_token -> PRIORITY .)
    TODO            reduce using rule 58 (special_token -> PRIORITY .)
    COMMENT         reduce using rule 58 (special_token -> PRIORITY .)
    TAGS            reduce using rule 58 (special_token -> PRIORITY .)
    ATIMESTAMP      reduce using rule 58 (special_token -> PRIORITY .)
    ITIMESTAMP      reduce using rule 58 (special_token -> PRIORITY .)
    METADATA        reduce using rule 58 (special_token -> PRIORITY .)
    STARS           reduce using rule 58 (special_token -> PRIORITY .)
    $end            reduce using rule 58 (special_token -> PRIORITY .)


state 27

    (59) special_token -> TODO .

    SEPARATOR       reduce using rule 59 (special_token -> TODO .)
    TEXT            reduce using rule 59 (special_token -> TODO .)
    SPACE           reduce using rule 59 (special_token -> TODO .)
    NEWLINE         reduce using rule 59 (special_token -> TODO .)
    SCHEDULING      reduce using rule 59 (special_token -> TODO .)
    COOKIE          reduce using rule 59 (special_token -> TODO .)
    PRIORITY        reduce using rule 59 (special_token -> TODO .)
    TODO            reduce using rule 59 (special_token -> TODO .)
    COMMENT         reduce using rule 59 (special_token -> TODO .)
    TAGS            reduce using rule 59 (special_token -> TODO .)
    ATIMESTAMP      reduce using rule 59 (special_token -> TODO .)
    ITIMESTAMP      reduce using rule 59 (special_token -> TODO .)
    METADATA        reduce using rule 59 (special_token -> TODO .)
    STARS           reduce using rule 59 (special_token -> TODO .)
    $end            reduce using rule 59 (special_token -> TODO .)


state 28

    (60) special_token -> COMMENT .

    SEPARATOR       reduce using rule 60 (special_token -> COMMENT .)
    TEXT            reduce using rule 60 (special_token -> COMMENT .)
    SPACE           reduce using rule 60 (special_token -> COMMENT .)
    NEWLINE         reduce using rule 60 (special_token -> COMMENT .)
    SCHEDULING      reduce using rule 60 (special_token -> COMMENT .)
    COOKIE          reduce using rule 60 (special_token -> COMMENT .)
    PRIORITY        reduce using rule 60 (special_token -> COMMENT .)
    TODO            reduce using rule 60 (special_token -> COMMENT .)
    COMMENT         reduce using rule 60 (special_token -> COMMENT .)
    TAGS            reduce using rule 60 (special_token -> COMMENT .)
    ATIMESTAMP      reduce using rule 60 (special_token -> COMMENT .)
    ITIMESTAMP      reduce using rule 60 (special_token -> COMMENT .)
    METADATA        reduce using rule 60 (special_token -> COMMENT .)
    STARS           reduce using rule 60 (special_token -> COMMENT .)
    $end            reduce using rule 60 (special_token -> COMMENT .)


state 29

    (61) special_token -> TAGS .

    SEPARATOR       reduce using rule 61 (special_token -> TAGS .)
    TEXT            reduce using rule 61 (special_token -> TAGS .)
    SPACE           reduce using rule 61 (special_token -> TAGS .)
    NEWLINE         reduce using rule 61 (special_token -> TAGS .)
    SCHEDULING      reduce using rule 61 (special_token -> TAGS .)
    COOKIE          reduce using rule 61 (special_token -> TAGS .)
    PRIORITY        reduce using rule 61 (special_token -> TAGS .)
    TODO            reduce using rule 61 (special_token -> TAGS .)
    COMMENT         reduce using rule 61 (special_token -> TAGS .)
    TAGS            reduce using rule 61 (special_token -> TAGS .)
    ATIMESTAMP      reduce using rule 61 (special_token -> TAGS .)
    ITIMESTAMP      reduce using rule 61 (special_token -> TAGS .)
    METADATA        reduce using rule 61 (special_token -> TAGS .)
    STARS           reduce using rule 61 (special_token -> TAGS .)
    $end            reduce using rule 61 (special_token -> TAGS .)


state 30

    (7) metadata -> METADATA SEPARATOR .

    TEXT            reduce using rule 7 (metadata -> METADATA SEPARATOR .)
    SPACE           reduce using rule 7 (metadata -> METADATA SEPARATOR .)
    ATIMESTAMP      reduce using rule 7 (metadata -> METADATA SEPARATOR .)
    ITIMESTAMP      reduce using rule 7 (metadata -> METADATA SEPARATOR .)
    STARS           reduce using rule 7 (metadata -> METADATA SEPARATOR .)
    $end            reduce using rule 7 (metadata -> METADATA SEPARATOR .)


state 31

    (9) org_tree -> heading SEPARATOR .

    STARS           reduce using rule 9 (org_tree -> heading SEPARATOR .)
    $end            reduce using rule 9 (org_tree -> heading SEPARATOR .)


state 32

    (12) heading -> headline NEWLINE . contents
    (29) contents -> . scheduling drawers body
    (36) scheduling -> . scheduling_data
    (37) scheduling -> . empty
    (30) scheduling_data -> . SCHEDULING SPACE any_timestamp NEWLINE
    (31) scheduling_data -> . SCHEDULING SPACE any_timestamp SEPARATOR
    (32) scheduling_data -> . SCHEDULING SPACE any_timestamp SPACE
    (33) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp NEWLINE
    (34) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp SEPARATOR
    (35) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp SPACE
    (72) empty -> .
